[package]
name = "alumy"
version = "0.1.7"
edition = "2021"
authors = ["jack <jackchanrs@gmail.com>"]
description = "Rust SDK for embedded systems development, providing safe and efficient hardware abstraction and device control."
license = "MIT"
repository = "https://github.com/alumy/alumy-rs"
homepage = "https://github.com/alumy/alumy-rs"
documentation = "https://docs.rs/alumy"
readme = "README.md"
keywords = ["embedded", "hardware", "sdk", "no-std", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.70"

[dependencies]
anyhow = "1.0.100"
crossbeam = "0.8.4"
libc = "0.2.180"
rolling-file = "0.2.0"
time = { version = "0.3.41", features = ["macros", "local-offset", "formatting"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "local-time"] }

[dev-dependencies]

[features]
default = []
